# rust-bot

./: Cargo.toml
src/: app.rs  gui.rs  inventory_manager.rs  main.rs
src/Vector/: mod.rs
src/mouse/: mod.rs
src/screen/: mod.rs
src/util/: mod.rs
src/vector/: mod.rs
