[package]
name = "runescape-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
rand = "0.8.5"
display-info = "0.3.2"
core-graphics = "0.22.3"
crossbeam = "0.8.1"
clearscreen = "1.0.10"
lazy_static = "1.4.0"
termion = "1.5.6"